# comp2510_final_project_Hospital_Management_System

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
docs/: project_report.md
inc/: doctor.h  menu.h  patient.h  report.h  schedule.h  tools.h
res/: patientRecords.txt
src/: doctor.c  main.c  menu.c  menu.h  patient.c  patient.h  report.c  schedule.c  schedule.h  tools.c
